Refactor LayersImpl
- Used List.of instead of Collections.singletonList
- Moved onDirectoryChange handling into dedicated method
- Removed deprecation warnings
- Used early exit where appropriate